--- a/index.html
+++ b/index.html
@@ -55,6 +55,108 @@
         </article>
     </section>
     <section id="menu1">
+        <article class="container_menu">
+            <div class="box_main_text">
+                <h2>CHECK OUT OUR MENU</h2>
+            </div>
+            <div class="box_menu1">
+               <div class="box_burrito">
+                <img class="img_burrito" src="images/burrito1.png" alt="img_burrito">  
+                <div class="burrito_header">
+                    <p>Breakfast Burritos</p>
+            </div>
+            </div>
+             <p>#1<span class = "p_span">Basic </span>2.59</p>
+                <p>#2<span class = "p_span">Westside </span> 2.99</p>
+                <p>#3<span class = "p_span">New Mexico </span> 3.39</p>
+                <p>#4<span class = "p_span">Albuquerque </span> 3.99</p>
+                 <p>#5<span class = "p_span">South Valley </span>3.99</p>
+                 <p>#6<span class = "p_span">Rip Grande </span>3.99</p>
+                <p>#7<span class = "p_span">Supreme </span>3.99</p>
+                 <p>#8<span class = "p_span">Santa Fe </span>3.99</p>
+                 <p>#9<span class = "p_span">Vegetarian </span>3.99</p>
+                <p>#10<span class = "p_span">Denver </span>4.29</p>
+            </div>
+            <div class="box_menu_img">
+                <img class="menu-img" src="images/icon_menu1.png" alt="menu_icon">
+            </div>
+
+            <div class="box_menu3">
+<div class="box_chicken">
+                <img class="img_chicken" src="images/chicken.png" alt="img_chicken">  
+                <div class="chicken_header">
+                    <p>Chicken Specialities</p>
+            </div>
+            </div>
+              <p>#1<span class = "p_span">Grilled Chicken BLT </span>2.59</p>
+                <p>#2<span class = "p_span">Westside Chicken </span>2.99</p>
+                <p>#3<span class = "p_span">New Mexico Chicken </span>3.39</p>
+                <p>#4<span class = "p_span">Albuquerque Chicken </span>3.99</p>
+                 <p>#5<span class = "p_span">South Valley Chicken </span>3.99</p>
+                 <p>#6<span class = "p_span">Rip Grande Chicken </span>3.99</p>
+                <p>#7<span class = "p_span">Supreme Chicken </span>3.99</p>
+                 <p>#8<span class = "p_span">Santa Fe Chicken </span>3.99</p>
+                 <p>#9<span class = "p_span">Vegetarian Chicken </span>3.99</p>
+                <p>#10<span class = "p_span">Denver Chicken </span>4.29</p>
+            </div>
+
+            <div class="box_menu4">
+            <div class="box_burrito">
+                <img class="img_burrito" src="images/bucket.png" alt="img_bucket">  
+                <div class="burrito_header">
+                    <p>Pollos by the Bucket</p>
+            </div>
+            </div>
+              <p>#1<span class = "p_span">Grilled Chicken Bucket </span> 2.59</p>
+                <p>#2<span class = "p_span">Westside Bucket</span> 2.99</p>
+                <p>#3<span class = "p_span">New Mexico Bucket</span> 3.39</p>
+                <p>#4<span class = "p_span">Albuquerque Bucket</span> 3.99</p>
+                 <p>#5<span class = "p_span">South Valley Bucket</span> 3.99</p>
+                 <p>#6<span class = "p_span">Rip Bucket</span> 3.99</p>
+                <p>#7<span class = "p_span">Supreme Bucket</span> 3.99</p>
+                 <p>#8<span class = "p_span">Santa Fe Bucket</span> 3.99</p>
+                 <p>#9<span class = "p_span">Vegetarian Bucket</span> 3.99</p>
+                <p>#10<span class = "p_span">Denver Bucket</span> 4.29</p>
+            </div>
+           <div class="box_menu5">
+                <div class="box_burrito">
+                <img class="img_burrito" src="images/platter.png" alt="img_platter">  
+                <div class="burrito_header">
+                    <p>Pollos Platters</p>
+            </div>
+            </div>
+              <p>#1<span class = "p_span">Chicken Platter </span> 7.59</p>
+                <p>#2<span class = "p_span">Westside Platter</span> 7.99</p>
+                <p>#3<span class = "p_span">New Mexico Platter</span> 7.39</p>
+                <p>#4<span class = "p_span">Albuquerque Platter</span> 7.99</p>
+                 <p>#5<span class = "p_span">South Valley Platter</span> 7.99</p>
+                 <p>#6<span class = "p_span">Rip Grande Platter</span> 7.99</p>
+                <p>#7<span class = "p_span">Supreme Platter</span> 7.99</p>
+                 <p>#8<span class = "p_span">Santa Fe Platter</span> 7.99</p>
+                 <p>#9<span class = "p_span">Vegetarian Platter</span> 7.99</p>
+                <p>#10<span class = "p_span">Denver Platter</span> 7.29</p>
+            </div>
+            <div class="box_menu6">
+               <div class="box_chicken">
+                <img class="img_chicken" src="images/beverages.png" alt="img_beverages">  
+                <div class="chicken_header">
+                    <p>Beverages</p>
+            </div>
+            </div>
+              <p>#1 <span class = "p_span">Coca-cola </span>1.59</p>
+                <p>#2<span class = "p_span"> Sprite</span> 1.99</p>
+                <p>#3 <span class = "p_span">Fanta</span> 1.39</p>
+                <p>#4 <span class = "p_span">Mountain Diew </span>1.99</p>
+                 <p>#5 <span class = "p_span">Pepsi</span> 1.99</p>
+                 <p>#6 <span class = "p_span">Apple juice </span> 3.99</p>
+                <p>#7 <span class = "p_span">Banana juice</span> 3.99</p>
+                 <p>#8 <span class = "p_span">Orange juice</span>3.99</p>
+                 <p>#9 <span class = "p_span">Local beer </span>3.99</p>
+                <p>#10<span class = "p_span"> Vodka </span>4.29</p>
+            </div>
+        </article>
+    </section>
+<!-- <section id="menu1">
         <article class="container">
             <div class="col-1" id="leftText">
                 <h2>CHECK OUT OUR MENU</h2>
@@ -63,7 +165,7 @@
                 <img class="menu-img" src="images/menu1.jpg" alt="menu">
             </div>
         </article>
-    </section>
+    </section> -->
     <section id="location">
         <article class="container">
             <div class="col-1" id="leftText">
